[gd_scene load_steps=4 format=3 uid="uid://xb5ln26ceqrn"]

[ext_resource type="Texture2D" uid="uid://cc75i0uav33kv" path="res://assets/background.png" id="1_80bay"]
[ext_resource type="Script" path="res://scenes/add_badge.gd" id="1_tj2ki"]
[ext_resource type="Texture2D" uid="uid://fysgjq3ivlw8" path="res://assets/white_background.png" id="2_u84f6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tj2ki")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_80bay")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1000, 450)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 52
bbcode_enabled = true
text = "[center][color=purple]Add Badges!"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="SpinBox" type="SpinBox" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = 4.0
value = 4.0
alignment = 1
update_on_text_changed = true
prefix = "Season:"
select_all_on_focus = true

[node name="BadgeFileSelectorHBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="FilePathBackground" type="TextureRect" parent="CenterContainer/VBoxContainer/BadgeFileSelectorHBox"]
self_modulate = Color(0.085751, 0.159813, 0.188895, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_u84f6")
expand_mode = 1

[node name="FilePathRichTextLable" type="RichTextLabel" parent="CenterContainer/VBoxContainer/BadgeFileSelectorHBox/FilePathBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.097
anchor_right = 0.982
anchor_bottom = 1.0
offset_left = 0.268
offset_top = -0.00699997
offset_right = 0.0839844
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "File Path"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="FileSelectButton" type="Button" parent="CenterContainer/VBoxContainer/BadgeFileSelectorHBox"]
layout_mode = 2
text = "Select Badge Image"

[node name="FileDialog" type="FileDialog" parent="CenterContainer/VBoxContainer/BadgeFileSelectorHBox"]
title = "Select Badge Files"
size = Vector2i(392, 159)
ok_button_text = "Select"
dialog_hide_on_ok = true
file_mode = 1
access = 2
filters = PackedStringArray("*.png", "*.jpg", "*.jpeg", "*.webp")
use_native_dialog = true

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Save & Create Badges"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.84
anchor_right = 0.199
anchor_bottom = 0.951
offset_left = -0.192001
offset_top = -0.320007
offset_right = -0.248016
offset_bottom = -0.248047
text = "Back to settings"

[connection signal="pressed" from="CenterContainer/VBoxContainer/BadgeFileSelectorHBox/FileSelectButton" to="." method="_on_file_select_button_pressed"]
[connection signal="file_selected" from="CenterContainer/VBoxContainer/BadgeFileSelectorHBox/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="files_selected" from="CenterContainer/VBoxContainer/BadgeFileSelectorHBox/FileDialog" to="." method="_on_file_dialog_files_selected"]
